<resources>
    <string name="app_name">CuderMoveNew</string>
    <string name="cuderimage">CuderImage</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="clear">clear</string>
    <string name="start">Vị trí bắt đầu</string>
    <string name="end">Vị trí phòng họp cần tới</string>
    <string name="btn_start">bắt đầu</string>
    <string name="btn_randomMap">random map</string>
</resources>
