<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.tranthanhtu.cudermovenew.views.MainActivity">

    <LinearLayout
        android:id="@+id/ll_row"
        android:orientation="vertical"
        android:layout_marginTop="31.5dp"
        android:layout_width="31.5dp"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_column"
        android:orientation="horizontal"
        android:layout_marginLeft="31.5dp"
        android:layout_width="wrap_content"
        android:layout_height="31.5dp"
        tools:ignore="RtlHardcoded">
    </LinearLayout>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_map"
        android:background="@drawable/list_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31.5dp"
        android:layout_marginTop="31.5dp"
        tools:ignore="RtlHardcoded">

    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:contentDescription="@string/cuderimage"
        android:visibility="invisible"
        android:layout_marginLeft="31.5dp"
        android:layout_marginTop="31.5dp"
        android:src="@drawable/cuder_single"
        android:id="@+id/imv_cuder"
        android:layout_width="31.5dp"
        android:layout_height="31.5dp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@id/rv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1.3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights">
                <Button
                    android:id="@+id/btn_left"
                    android:text="@string/left"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="ButtonStyle,NestedWeights" />
                <Button
                    android:id="@+id/btn_right"
                    android:text="@string/right"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btn_up"
                    android:text="@string/up"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btn_down"
                    android:text="@string/down"
                    android:layout_weight="1.1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btn_clear"
                    android:textColor="@color/colorAccent"
                    android:text="@string/clear"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
            <RelativeLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ListView
                    android:id="@+id/lv_move"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               tools:ignore="NestedWeights">
               <TextView
                   android:gravity="center_vertical"
                   android:text="@string/start"
                   android:layout_weight="2"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   tools:ignore="NestedWeights" />
               <TextView
                   android:id="@+id/location_start"
                   android:gravity="center_vertical"
                   android:layout_weight="1"
                   android:layout_width="0dp"
                   android:layout_height="match_parent" />
           </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:gravity="center_vertical"
                    android:text="@string/end"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" >
                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/tv_location_end"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="LabelFor" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="UselessLeaf">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnStart"
        tools:ignore="RelativeOverlap" />
    <Button
        android:layout_below="@id/btnStart"
        android:text="@string/btn_randomMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_randomMap"
        tools:ignore="RelativeOverlap" />
    <Button
        android:layout_below="@id/btn_randomMap"
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_reset"
        tools:ignore="RelativeOverlap" />
    <LinearLayout
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_below="@id/btn_reset"
        android:id="@+id/ll_numberMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

</RelativeLayout>
